--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 
 .template{
     width: 50%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
